# net-sight

./: .gitignore  README.md  default_settings.toml  pyproject.toml  requirements.md  research.md  session_progress.md  settings_default.toml  settings_user.toml  to-do.txt  user_settings.toml
.github/: copilot-instructions.md
backend/: __init__.py  __main__.py  main.py  settings.py
backend/analysis/: __init__.py  anomaly_detector.py  device_registry.py  packet_inspector.py  packet_processor.py  traffic_stats.py
backend/models/: __init__.py  apdu.py  bvlc.py  npdu.py  packet.py
backend/parsers/: __init__.py  apdu.py  bvlc.py  npdu.py  pipeline.py
backend/tests/: test_analysis.py  test_cli.py  test_parsers_quick.py  test_settings.py  test_tui.py
backend/transport/: __init__.py  bacnet_ip.py  base.py  pcap_replay.py  whois_sender.py
backend/tui/: __init__.py  app.py  styles.tcss  widgets.py
netsight_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
samples/: broadcast_storm.pcap  duplicate_device_id.pcap  gen_broadcast_storm.py  gen_duplicate_device.py  test_bacnet.pcap
